editing slider coursel section with customize color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           colors: {
             clifford: '#da373d',
             btn_regular: '#E76F51',
-            // disc_color: rgba(0, 0, 0, 0.8),
+            'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
           }
         }
       }
@@ -78,7 +78,7 @@
       </nav>
     </header>
     <!--slider carousel section -->
-    <div class="carousel w-full">
+    <div class="carousel w-full bg-bike-primary-bg">
       <div id="slide1" class="carousel-item relative w-full">
         <div class="p-16 md:flex  ">
           <div class="space-y-5 flex-1">
