Latest section ready

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             clifford: '#da373d',
             btn_regular: '#E76F51',
             'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
+            'dis-color': '#6C6C6C'
           }
         }
       }
@@ -78,7 +79,7 @@
       </nav>
     </header>
     <!--slider carousel section -->
-    <div class="carousel w-full bg-bike-primary-bg">
+    <div class="carousel w-full bg-bike-primary-bg mb-20">
       <div id="slide1" class="carousel-item relative w-full">
         <div class="p-16 md:flex  ">
           <div class="space-y-5 flex-1">
@@ -152,7 +153,86 @@
         </div>
       </div>
     </div>
+    <!-- Feature Bike section -->
+    <div class="text-center mb-5">
+      <h1 class="text-3xl font-bold py-4">Fetured Bikes In This Year</h1>
+      <p class="text-xs text-orange-600">Best bike collection</p>
+      <div class="md:flex justify-between overflow-hidden items-center ">
+        <div class="w-1/3 p-7 ">
+          <img src="./images/slider/bike4.png" alt="" class="w-full h-full">
+        </div>
+        <div class="w-1/3 p-7 ">
+          <img src="./images/others/extrabike.png" alt="" class="w-full">
+        </div>
+        <div class="w-1/3 p-7 ">
+          <img src="./images/slider/bike3.png" alt="" class="w-full">
+        </div>
+      </div>
+    </div>
+    <!-- Latest News section -->
+    <div>
+      <h1 class="text-center my-5 text-3xl font-bold">Latest News</h1>
+      <div class="md:flex space-x-5">
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+          <figure>
+            <img src="./images/others/latest1.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+            <p class="my-2 text-dis-color text-sm font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit.
+              Lacus,
+              fermentum
+              amet
+              faucibus sed
+              id nisi
+              lectus at.</p>
+            <div class="card-actions justify-start">
+              <button class="btn bg-btn_regular text-white">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+          <figure>
+            <img src="./images/others/latest2.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title">2021 Honda CBR500R</h2>
+            <p class="my-2 text-dis-color text-sm font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit.
+              Lacus,
+              fermentum
+              amet
+              faucibus sed
+              id nisi
+              lectus at.</p>
+            <div class="card-actions justify-start">
+              <button class="btn bg-btn_regular text-white">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+          <figure>
+            <img src="./images/others/latest3.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title">Motorcycles & Scooters</h2>
+            <p class="my-2 text-dis-color text-sm font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit.
+              Lacus,
+              fermentum
+              amet
+              faucibus sed
+              id nisi
+              lectus at.</p>
+            <div class="card-actions justify-start">
+              <button class="btn bg-btn_regular text-white">Buy Now</button>
+            </div>
+          </div>
+        </div>
 
+      </div>
+    </div>
   </main>
   <footer>
 
