ask something section done

--- a/index.html
+++ b/index.html
@@ -158,22 +158,22 @@
       <h1 class="text-3xl font-bold py-4">Fetured Bikes In This Year</h1>
       <p class="text-xs text-orange-600">Best bike collection</p>
       <div class="md:flex justify-between overflow-hidden items-center ">
-        <div class="w-1/3 p-7 ">
+        <div class="w-full md:w-1/3 p-7 ">
           <img src="./images/slider/bike4.png" alt="" class="w-full h-full">
         </div>
-        <div class="w-1/3 p-7 ">
+        <div class=" w-full md:w-1/3  p-7 ">
           <img src="./images/others/extrabike.png" alt="" class="w-full">
         </div>
-        <div class="w-1/3 p-7 ">
+        <div class="w-full md:w-1/3  p-7 ">
           <img src="./images/slider/bike3.png" alt="" class="w-full">
         </div>
       </div>
     </div>
     <!-- Latest News section -->
-    <div>
+    <div class="">
       <h1 class="text-center my-5 text-3xl font-bold">Latest News</h1>
-      <div class="md:flex space-x-5">
-        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+      <div class="md:flex md:space-x-5  ">
+        <div class="card card-compact bg-base-100 w-96 shadow-xl mx-auto  m-2">
           <figure>
             <img src="./images/others/latest1.png" alt="Shoes" />
           </figure>
@@ -192,7 +192,7 @@
             </div>
           </div>
         </div>
-        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+        <div class="card card-compact bg-base-100 w-96 shadow-xl mx-auto  m-2">
           <figure>
             <img src="./images/others/latest2.png" alt="Shoes" />
           </figure>
@@ -211,7 +211,7 @@
             </div>
           </div>
         </div>
-        <div class="card card-compact bg-base-100 w-96 shadow-xl">
+        <div class="card card-compact bg-base-100 w-96 shadow-xl mx-auto  m-2">
           <figure>
             <img src="./images/others/latest3.png" alt="Shoes" />
           </figure>
@@ -231,6 +231,117 @@
           </div>
         </div>
 
+      </div>
+    </div>
+    <!-- Happy Client section -->
+    <div class="py-20">
+      <h1 class="text-center text-4xl font-bold ">Happy <span class="text-orange-400 pb-20">Clients says</span></h1>
+      <div class="grid grid-cols-1 gap-4 lg:grid-cols-3">
+        <div class="card card-compact bg-base-100 w-96 shadow-xl mx-auto  m-2 ">
+          <figure>
+            <img src="./images/others/user-1.png" alt="Shoes" class="p-10 " />
+          </figure>
+          <div class="card-body text-center">
+            <p class="my-2 text-dis-color text-sm font-normal ">Slate helps you see how
+              many more days you need
+              to work to reach your financial
+              goal for the month and year.</p>
+            <h2 class="font-bold text-xl text-center">Regina Miles</h2>
+            <h2 class="font-bold text-sm text-center text-blue-600">Banker</h2>
+            <div class="flex w-[400px] overflow-hidden pl-3">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-half-stroke-solid.svg" alt="" class="w-[10px]">
+
+            </div>
+
+          </div>
+        </div>
+        <div class="card card-compact bg-base-100 w-96 shadow-xl mx-auto  m-2 ">
+          <figure>
+            <img src="./images/others/user-2.png" alt="Shoes" class="p-10" />
+          </figure>
+          <div class="card-body text-center">
+            <p class="my-2 text-dis-color text-sm font-normal ">Slate helps you see how
+              many more days you need
+              to work to reach your financial
+              goal for the month and year.</p>
+            <h2 class="font-bold text-xl text-center">Regina Miles</h2>
+            <h2 class="font-bold text-sm text-center text-blue-600">Banker</h2>
+            <div class="flex w-[400px] overflow-hidden pl-3">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-half-stroke-solid.svg" alt="" class="w-[10px]">
+
+            </div>
+          </div>
+        </div>
+        <div class="card card-compact bg-base-100 w-96 shadow-xl mx-auto  m-2 ">
+          <figure>
+            <img src="./images/others/user-3.png" alt="Shoes" class="p-10" />
+          </figure>
+          <div class="card-body text-center">
+            <p class="my-2 text-dis-color text-sm font-normal ">Slate helps you see how
+              many more days you need
+              to work to reach your financial
+              goal for the month and year.</p>
+            <h2 class="font-bold text-xl text-center">Regina Miles</h2>
+            <h2 class="font-bold text-sm text-center text-blue-600">Banker</h2>
+            <div class="flex w-[400px] overflow-hidden pl-3">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-solid.svg" alt="" class="w-[10px]">
+              <img src="./images/icons/star-half-stroke-solid.svg" alt="" class="w-[10px]">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Ask something -->
+    <div>
+      <h1 class="text-center text-4xl font-bold mb-20 ">Frequently Asked <span class="text-orange-500">Questions</span>
+      </h1>
+      <div class="lg:flex justify-between items-center ">
+        <!-- question mark div -->
+        <div class="w-full ">
+          <img src="./images/others/faq.png" alt="">
+        </div>
+        <div class="w-full ">
+          <div class="collapse collapse-plus bg-base-200 my-5">
+            <input type="radio" name="my-accordion-3" checked="checked" />
+            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-content">
+              <p>hello</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200 my-5">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-content">
+              <p>hello</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200 my-5">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-content">
+              <p>hello</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200 my-5">
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-content">
+              <p>hello</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
