--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 </head>
 
 <body class="poppins-regular">
-
   <main class="md:container mx-auto lg:p-16">
     <!-- navbar section -->
     <header>
@@ -345,8 +344,29 @@
       </div>
     </div>
   </main>
-  <footer>
-
+  <footer class="container mx-auto  lg:p-16  bg-black text-slate-400 md:flex justify-between items-center">
+    <div>
+      <div class="flex list-none space-x-5 ">
+        <li>Download Now</li>
+        <li>License</li>
+      </div>
+      <div class="flex list-none space-x-5 mt-5">
+        <li>About</li>
+        <li>Features</li>
+        <li>Pricing</li>
+        <li>Careers</li>
+        <li>Help</li>
+        <li>Privacy Policy</li>
+      </div>
+      <div>
+        <h1 class="mt-5">© 2020 bike. All rights reserved</h1>
+      </div>
+    </div>
+    <div class="list-none space-y-3 ">
+      <li>Get the App</li>
+      <li><img src="./images/others/android.png" alt=""></li>
+      <li><img src="./images/others/ios.png" alt=""></li>
+    </div>
   </footer>
 </body>
 
